# qtlmap

./: AUTHORS  CMakeLists.txt  ChangeLog  LICENSE  README  README.md  check.sh
Test_Dev/execution/output_files/: carte  genea  p_analyse  pheno  test.sh  test_multi.sh  typage
Test_Dev/snp_example/: carte  genea  model  p_analyse  pheno  typage
Test_Dev/snp_example/OUTPUT/: result
cmake_modules/: CompileOptionsQTLMap.cmake  FindIntelQTLMapPref.cmake  FindMKL.cmake
dist_sample/design_protocol/: param_sim_optim  ps_analyse_optim
dist_sample/design_protocol/OUTPUTSIM/: result
dist_sample/eqtl-analysis/: README  genealogy  genotype  map  model  p_analyse
dist_sample/eqtl-analysis/OUTPUT/: result  result_freqall  result_phases  summary
dist_sample/porcqtl/: README  genealogy  genotype  map  model  p_analyse  param_sim_real  param_sim_simul  phenotypes  res_23  res_5  res_6
dist_sample/porcqtl/OUTPUT/: dams  mateff  pateff  pded_Chr_7  phases  result  sires  summary
lib/: CMakeLists.txt
lib/miscf77/: CMakeLists.txt  plott.F  prob.f
lib/nlopt-1.2/: CMakeLists.txt  ChangeLog  Makefile.in  config.h  config.h.in  config.status  configure  libtool  nlopt.pc  qtlmap_interface.c  qtlmap_interface_dga2.cpp
lib/nlopt-1.2/api/: nlopt.c  nlopt.f
lib/nlopt-1.2/auglag/: Makefile.in
lib/nlopt-1.2/bobyqa/: Makefile.in
lib/nlopt-1.2/cdirect/: Makefile.in
lib/nlopt-1.2/cobyla/: Makefile.in  cobyla.c  cobyla.h
lib/nlopt-1.2/crs/: Makefile.in
lib/nlopt-1.2/direct/: Makefile.in
lib/nlopt-1.2/isres/: Makefile.in
lib/nlopt-1.2/lbfgs/: Makefile.in
lib/nlopt-1.2/luksan/: Makefile.in
lib/nlopt-1.2/mlsl/: Makefile.in
lib/nlopt-1.2/mma/: Makefile.in
lib/nlopt-1.2/neldermead/: Makefile.in
lib/nlopt-1.2/newuoa/: Makefile.in
lib/nlopt-1.2/octave/: Makefile.in
lib/nlopt-1.2/praxis/: Makefile.in
lib/nlopt-1.2/stogo/: Makefile.in
lib/nlopt-1.2/util/: Makefile.in  nlopt-util.h
lib/optimization/: CMakeLists.txt  lbfgs-2.4.f
lib/orderpack-2.0/: CMakeLists.txt  givcor.f90  index.html  news.html  orderpack.f90  rnkpar.f90  uniinv.f90  unirnk.f90
lib/randlib/: CMakeLists.txt  sdot.f  spofa.f
lib/symmax2sat/: CMakeLists.txt  ToulbarVersion.hpp  tb2binconstr.cpp  tb2binconstr.hpp  tb2wcsp.cpp
src/: CMakeLists.txt  qtlmap.F95
src/analyse/: CMakeLists.txt  const_gpu_impl.h  cuda_qtlmap_linear.cu  m_qtlmap_analyse.F95  m_qtlmap_analyse_biallelic_farnir.f95  m_qtlmap_analyse_discret_unitrait.f95  m_qtlmap_analyse_gen.f95  m_qtlmap_analyse_lin_gen.f95  m_qtlmap_analyse_modlin.f95  m_qtlmap_analyse_modlin_cox.f95  m_qtlmap_analyse_modlin_ldla.f95  m_qtlmap_analyse_multitrait.f95  m_qtlmap_analyse_multitrait_DA.f95  m_qtlmap_analyse_unitrait.f95  m_qtlmap_calcul_ic.f95  m_qtlmap_incidence.F95  m_qtlmap_incidence_linear.F95  m_qtlmap_incidence_multi.f95  m_qtlmap_incidence_optim.F95
src/data/: CMakeLists.txt  m_qtlmap_base.F95  m_qtlmap_constant.f95  m_qtlmap_constant.mod  m_qtlmap_type_cli.F95  m_qtlmap_type_dataset.f95  m_qtlmap_type_dataset_trio.f95  m_qtlmap_type_genealogy.f95  m_qtlmap_type_genotype.f95  m_qtlmap_type_incidence_solution.f95  m_qtlmap_type_lrt_solution.f95  m_qtlmap_type_map.f95  m_qtlmap_type_parameter.f95  m_qtlmap_type_parameter_simulation.f95  m_qtlmap_type_pdd.f95  m_qtlmap_type_phenotype.f95  m_qtlmap_types.f95
src/haplotype/: CMakeLists.txt  m_qtlmap_haplotype.f95  m_qtlmap_haplotype_V1.f95  m_qtlmap_haplotype_V2.f95  m_qtlmap_haplotype_external.f95  m_qtlmap_haplotype_ldla.f95  m_qtlmap_haplotype_util.f95  m_qtlmap_phase_offspring.f95
src/input/: CMakeLists.txt  m_qtlmap_factory_dataset.f95  m_qtlmap_genealogy.f95  m_qtlmap_genotype.f95  m_qtlmap_map.f95  m_qtlmap_phenotype.f95  m_qtlmap_simulation.f95
src/log/: CMakeLists.txt  m_qtlmap_log.F95
src/output/: CMakeLists.txt  m_qtlmap_format_carthagene.f95  m_qtlmap_output_handler.f95
src/tools/: CMakeLists.txt  m_qtlmap_isymmax2sat.f95  m_qtlmap_math.F95  m_qtlmap_optimization.F95  m_qtlmap_solve_linear.F95
testdev/execution/: README
testdev/execution/calcul_corcd/: genea  model_1  model_n  p_analyse  p_analyse_1  p_analyse_n  perf  test.sh  test_multi.sh
testdev/execution/calcul_corcd/OUTPUT/: dams  grid2qtl  mateff  pateff  pded_Chr_7  pdedjoin_Chr_7  phases  result  sires  summary
testdev/execution/ld/: README  carte  genea  model  p_analyse  perfs  test.sh  typages
testdev/execution/output_files/: p_analyse_n  test.sh  test_multi.sh
testdev/execution/output_files/OUTPUT/: dams  mateff  pateff  pded_Chr_1  pdedjoin_Chr_1  phases_offspring  phases_offspring_carac  phases_offspring_carac1  phases_offspring_trait1  phases_offspring_trait2  result  sires  summary
testdev/execution/race_ld/: CALCUL.txt  carte  model_fx  p_analyse  ped  perf_fx  race  typ
testdev/execution/race_ld/OUTPUT/: phases26  result  result_freqall  sires26  summary26
testdev/execution/transcript/: model  model_1  model_n  p_analyse  p_analyse_n  pheno_t  test.sh  test_multi.sh
testdev/execution/transcript/OUTPUT/: dams  freqall  mateff  pateff  phases_offspring  phases_offspring_trait1  phases_offspring_trait2  phases_offspring_trait3  phases_offspring_trait4  phases_offspring_trait5  result  sires  summary
testdev/unit/: CMakeLists.txt  main.f95
testdev/unit/src/data/: test_type_lrt_solution.f95  test_type_map.f95
